# CLionProjects

./: .gitignore  README.md
boost/: CMakeLists.txt  README.md  main.cpp
hello/: build.sh
lenna/: mainwindow.cpp
ono/: CMakeLists.txt  README.md
ono/src/: main.cpp
qt/: CMakeLists.txt  README.md  main.cpp
